# aptos-client-icp

./: Cargo.toml
client/: .gitignore  Cargo.toml  README.md
client/docs/: AccountData.md  AccountSignature.md  AccountSignatureEd25519Signature.md  AccountSignatureMultiEd25519Signature.md  AccountSignatureMultiKeySignature.md  AccountSignatureNoAccountSignature.md  AccountSignatureSingleKeySignature.md  AccountsApi.md  AptosError.md  AptosErrorCode.md  Block.md  BlockEndInfo.md  BlockEpilogueTransaction.md  BlockMetadataExtension.md  BlockMetadataExtensionBlockMetadataExtensionEmpty.md  BlockMetadataExtensionBlockMetadataExtensionRandomness.md  BlockMetadataExtensionRandomness.md  BlockMetadataTransaction.md  BlockMetadataTransactionBlockMetadataExtension.md  BlocksApi.md  DecodedTableData.md  DeleteModule.md  DeleteResource.md  DeleteTableItem.md  DeletedTableData.md  DirectWriteSet.md  DkgResultTransaction.md  Ed25519.md  Ed25519Signature.md  EncodeSubmissionRequest.md  EntryFunctionPayload.md  Event.md  EventGuid.md  EventsApi.md  ExportedAggregateSignature.md  ExportedDkgTranscript.md  ExportedProviderJwks.md  ExportedQuorumCertifiedUpdate.md  FederatedKeyless.md  FeePayerSignature.md  (+99 more)
client/src/: lib.rs
client/src/apis/: accounts_api.rs  blocks_api.rs  configuration.rs  events_api.rs  general_api.rs  mod.rs  tables_api.rs  transactions_api.rs  view_api.rs
client/src/client/: mod.rs
client/src/http/: mod.rs
client/src/models/: account_data.rs  account_signature.rs  account_signature_ed25519_signature.rs  account_signature_multi_ed25519_signature.rs  account_signature_multi_key_signature.rs  account_signature_no_account_signature.rs  account_signature_single_key_signature.rs  aptos_error.rs  aptos_error_code.rs  block.rs  block_end_info.rs  block_epilogue_transaction.rs  block_metadata_extension.rs  block_metadata_extension_block_metadata_extension_empty.rs  block_metadata_extension_block_metadata_extension_randomness.rs  block_metadata_extension_randomness.rs  block_metadata_transaction.rs  block_metadata_transaction_block_metadata_extension.rs  decoded_table_data.rs  delete_module.rs  delete_resource.rs  delete_table_item.rs  deleted_table_data.rs  direct_write_set.rs  dkg_result_transaction.rs  ed25519.rs  ed25519_signature.rs  encode_submission_request.rs  entry_function_payload.rs  event.rs  event_guid.rs  exported_aggregate_signature.rs  exported_dkg_transcript.rs  exported_provider_jwks.rs  exported_quorum_certified_update.rs  federated_keyless.rs  fee_payer_signature.rs  fee_payer_signature_fee_payer_signer.rs  gas_estimation.rs  genesis_payload.rs  (+92 more)
example/: Cargo.toml  (+1 more)
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/src/signer/: mod.rs
(+3 files in other folders)
