[workspace]
members = [
    "client",
    "sdk",
    "example/src/example_backend",
]
workspace.resolver = "2"

[workspace.dependencies]
aptos-sdk-icp = { path = "sdk" }
aptos-client-icp = { path = "client" }

ic-cdk = "0.16.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
candid = "0.10.10"
bcs = "0.1.6"
getrandom = { version = "0.2.3", features = ["custom"] }
anyhow = "1.0.91"
async-trait = "0.1.83"
hex = "0.4.3"
