[package]
name = "aptos-client-icp"
version = "0.0.1"
authors = ["OpenAPI Generator team and contributors", "hide-yoshi <hideyoshi@horizonx.tech>"]
description = "The Aptos Node API is a RESTful API for client applications to interact with the Aptos blockchain."
license = "MIT"
edition = "2021"

[dependencies]
ic-cdk.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
url.workspace = true
uuid.workspace = true
candid.workspace = true
getrandom.workspace = true
anyhow.workspace = true