[package]
name = "aptos-sdk-icp"
version = "0.0.1"
authors = ["hide-yoshi <hideyoshi@horizonx.tech>"]
description = "Aptos SDK for Internet Computer"
license = "Apache 2.0"
edition = "2021"
tags = ["icp", "internet-computer", "sdk", "aptos"]

[dependencies]
aptos-client-icp.workspace = true
bcs.workspace = true
serde.workspace = true
anyhow.workspace = true
ic-cdk.workspace = true
candid.workspace = true
async-trait.workspace = true
hex.workspace = true
[dependencies.getrandom]
version = "0.2.3"
features = ["custom"]
